# OptiFlow

./: .env.example  .gitignore  DEV_COMMANDS.md  README.md  VERIFICATION.md  app.py  config.yaml  pyproject.toml  requirements.txt  test_integration.py
agent/: __init__.py  claude_client.py  fallback.py  proposal_schemas.py  proposal_validator.py  reschedule_service.py  schemas.py  service.py  setup_guidance_service.py  validator.py
agent/tests/: test_agent.py
backend/alembic/: env.py
backend/app/: __init__.py  main.py  seed.py
backend/tests/: conftest.py  test_auth.py  test_new_features.py  test_run_sanitization.py  test_security.py
data_generator/: __init__.py  config.py  generator.py  validators.py
frontend/: README.md  index.html  vite.config.ts
frontend/src/: ACTIVITY_METRICS_GUIDE.md  AGENT_GUIDE.md  AI_AGENT_FLOW.md  ARCHITECTURE.md  AUTH_FLOWS.md  AUTH_QUICK_START.md  AUTH_TESTING_GUIDE.md  AUTH_VISUAL_REFERENCE.md  App.tsx  CHECKLIST.md  DARK_MODE_IMPLEMENTATION.md  DARK_MODE_REMAINING_FILES.md  DARK_MODE_TODO.md  DARK_MODE_UPDATES_COMPLETED.md  DEMO_GUIDE.md  DESIGN_ENHANCEMENTS.md  FLOW_GUIDE.md  HOW_TO_TEST_AUTH.md  INFORMATION_ARCHITECTURE.md  METRICS_PAGE_DESIGN_SPEC.md  OWNER_ADMIN_GUIDE.md  PLANNER_DATA_VALIDATION_GUIDE.md  PLANNER_EVENTS_RESCHEDULE_GUIDE.md  PLANNER_RUNS_GUIDE.md  PLANNER_RUN_DETAIL_GUIDE.md  PLANNER_SCHEDULE_COMPARE_GUIDE.md  PLANNER_SCREENS_SUMMARY.md  README.md  README_APP.md  (+3 more)
scheduler/: __init__.py  baseline_scheduler.py  constraints.py  data_loader.py  job_shop_solver.py  kpi.py
templates/: index.html  schedule.html
(+159 files in other folders)
