[project]
name = "cnc-job-shop"
version = "0.1.0"
description = "CNC Job Shop Operations Assistant"
requires-python = ">=3.9"

[tool.pytest.ini_options]
testpaths = ["backend/tests", "agent/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # Line too long (handled by formatter)
